simple auto commit

--- a/app/partials/temai_index.html
+++ b/app/partials/temai_index.html
@@ -102,6 +102,7 @@
 		<img src="img/temai/qcode_big.png" srcset="img/temai/qcode_min.png 568w, img/temai/qcode_big.png 667w, img/temai/qcode_big.png 736w">	
 	</div>
 </div>
+<script src="wx_bx_gl/js/swiper.min.js"></script>
 <script>
   var swiper = new Swiper('.swiper-container', {
         pagination: '.swiper-pagination',
