--- a/app/css/app.css
+++ b/app/css/app.css
@@ -292,3 +292,62 @@ footer {
     background: url("../../img/index/service_hover.png") no-repeat center;
     background-size: 22px;
   }
+  .swiper-ctrl {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 10001;
+}
+.opacity_ctrl {
+  position: fixed;
+  left: 0;
+  top: 0;
+  background: #000;
+  opacity: .4;
+  width: 100%;
+  height: 100%;
+  z-index: 10002;
+}
+.off {
+  position: fixed;
+  right: 19px;
+  top: 15px;
+  width: 20px;
+  height: 20px;
+  z-index: 10003;
+}
+.off img {
+  width: 100%;
+  height: 100%;
+}
+.swiper-ctrl {
+    width: 100%;
+    height: 100%;
+}
+.swiper-ctrl .swiper-wrapper {
+  z-index: 999999;
+}
+.swrap_ctrl {
+  position: relative;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  margin: 20% auto;
+}
+.swiper-wrapper .slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  width: 2.67rem;
+  height: 60%;
+  height: 0;
+  border-radius: 10px;
+}
+.swiper-slide .img1,.img2 {
+  /*width: 3.34rem;*/
+  width: 2.67rem;
+}
