--- a/app/css/bz_ts.css
+++ b/app/css/bz_ts.css
@@ -250,19 +250,20 @@
     float: left;
     font-size: .15rem;
     color: #fff;
-    padding: .17rem 0 0 .3rem; }
+    padding: .35rem 0 0 .3rem; }
     .promote_ctrl .head_ctrl .head_center img {
       margin-left: .05rem;
       width: .45rem;
       display: block; }
   .promote_ctrl .head_ctrl .head_right {
-    float: right; }
+    float: right;
+    text-align: center; }
     .promote_ctrl .head_ctrl .head_right .score {
       font-size: .51rem;
       color: #fff;
       text-align: center;
       line-height: normal;
-      padding-top: 30px; }
+      padding-top: 22px; }
     .promote_ctrl .head_ctrl .head_right div:nth-child(2) {
       width: 1.16rem;
       height: .38rem;
@@ -278,7 +279,8 @@
   display: -webkit-flex;
   display: -moz-box;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  padding: 0 10px; }
   .promote_ctrl .promote_main .main_left {
     width: 55px; }
     .promote_ctrl .promote_main .main_left .shuxian {
@@ -332,7 +334,7 @@
         text-align: center;
         font-size: 12px;
         color: #fff;
-        margin-top: 10px; }
+        margin-top: 8px; }
       .promote_ctrl .promote_main .pro_main_ctrl .main_word .main_l {
         -webkit-box-flex: 1;
         -webkit-flex: 1;
