--- a/app/css/index_part.css
+++ b/app/css/index_part.css
@@ -81,3 +81,61 @@ body {
 
 .mag-container {
   margin-top: 1rem; }
+
+.swiper-container {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 10001; }
+
+.opacity_ctrl {
+  position: fixed;
+  left: 0;
+  top: 0;
+  background: #000;
+  opacity: .4;
+  width: 100%;
+  height: 100%;
+  z-index: 10002; }
+
+.off {
+  position: fixed;
+  right: 19px;
+  top: 15px;
+  width: 20px;
+  height: 20px;
+  z-index: 10003; }
+
+.off img {
+  width: 100%;
+  height: 100%; }
+
+.swiper-container {
+  width: 100%;
+  height: 100%; }
+
+.swiper-wrapper {
+  position: relative;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  margin: 20% auto;
+  z-index: 99999999; }
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  width: 2.67rem;
+  /*width: 60%;*/
+  height: 60%;
+  height: 0;
+  border-radius: 10px; }
+
+.swiper-slide img {
+  /*width: 3.34rem;*/
+  width: 2.67rem; }
