--- a/app/partials/bz_ts.html
+++ b/app/partials/bz_ts.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/bz_ts.css?rev=52c2a4184331501995abcafc22e44f92">
+<link rel="stylesheet" type="text/css" href="css/bz_ts.css?rev=ghffgfgfg">
 <div class="promote_ctrl">
 	<div class="head_ctrl">
 		<div class="head_left">
