--- a/app/sass/bz_ts.scss
+++ b/app/sass/bz_ts.scss
@@ -37,7 +37,7 @@
 			float: left;
 			font-size: .15rem;
 			color: #fff;
-			padding: .17rem 0 0 .3rem;
+			padding: .35rem 0 0 .3rem;
             img {
             	margin-left: .05rem;
             	width: .45rem;
@@ -46,12 +46,13 @@
 		}
 		.head_right {
 			float: right;
+			text-align: center;
 			.score {
 				font-size: .51rem;
 				color: #fff;
 				text-align: center;
 				line-height: normal;
-				padding-top: 30px;
+				padding-top: 22px;
 			}
 			div:nth-child(2) {
 				width: 1.16rem;
@@ -68,6 +69,7 @@
 	}
 	.promote_main {
 	@include flexbox;
+	padding: 0 10px;
 		.main_left {
 			width: 55px;
 			.shuxian {
@@ -115,7 +117,7 @@
 				text-align: center;
 				font-size: 12px;
 				color: #fff;
-				margin-top: 10px;
+				margin-top: 8px;
 			}
 			.main_l {
 				@include flex(1);
