--- a/app/sass/temai_list.scss
+++ b/app/sass/temai_list.scss
@@ -56,7 +56,7 @@ body {
 				color:#fff;
 				border-radius:3px;
 				padding: .01rem .03rem;
-				font-size: .1rem
+				font-size: .1rem;
 			}
 			.special_offer {
                 background-color: #ff005a;
