--- a/app/css/bd_education_new.css
+++ b/app/css/bd_education_new.css
@@ -20,9 +20,13 @@ header.icon_3 {
 header.icon_2 {
   background: #006ee9 url("../img/heart_icon.png") no-repeat 18px center;
   background-size: 28px; }
-header span {
+header .how {
   float: right;
-  vertical-align: middle; }
+  vertical-align: middle;
+  color: #97c8ff;
+  font-size: 14px; }
+.score {
+  font-size: 21px; }
 .slider-container {
   display: -webkit-box;
   display: -webkit-flex;
@@ -49,7 +53,7 @@ header span {
     justify-content: center; }
 .type {
   color: #006ee9;
-  font-size: 15px;
+  font-size: 14px;
   line-height: 20px;
   margin-bottom: 10px; }
   .type .percent {
