--- a/app/sass/bd_education_new.scss
+++ b/app/sass/bd_education_new.scss
@@ -6,6 +6,7 @@
    body{
 	   background-color: #f5f5f5;
    }
+
 	.up{
 		-ms-transform: rotate(180deg); /* IE 9 */
 	    -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
@@ -34,10 +35,15 @@
 	}
 	
 
-	header span{
+	header .how{
 		float:right;
 		vertical-align: middle;
+		color:#97c8ff;
+		font-size:14px;
 	}
+	.score{
+   		font-size:21px;
+   	}
 	.slider-container{
 		@include flexbox;
 		.slider-item{
@@ -52,7 +58,7 @@
 	}
 	.type{
 		color:#006ee9;
-		font-size:15px;
+		font-size:14px;
 		line-height: 20px;
 		margin-bottom: 10px;
 		.percent{
@@ -68,7 +74,8 @@
 		  	vertical-align: 1px;
 		  	margin-left:2px;
 		  	display: inline-block;
-		  }
+	 }
+	 
 	.icon-guard{
 		  	background:url('../img/score/guard.jpg') no-repeat center;
 		  	background-size:20px;
@@ -76,7 +83,7 @@
 		  	height:20px;
 		  	vertical-align: -5px;
 		  	display: inline-block;
-		  }
+	 }
 	.icon-up{
 		  	background:url('../img/score/up.jpg') no-repeat center;
 		  	background-size:20px;
