--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -131,12 +131,12 @@
 	<div class="left" style="width: 65%;height: 48px;">
         <a class="left_btn left">
 			总 
-			<span class="score" id="sum_score">10</span>
+			<span class="score" id="sum_score">{{data.scoreFix }}</span>
 			<span >分</span>
 		</a>
 		<a class="right_center"></a>
 		<a class="right_btn right">
-			<span class="score font_wei" id="estimateMoneyContainer">{{estimateMoney}}</span>
+			<span class="score font_wei" id="estimateMoneyContainer">{{data.premium}}</span>
 			<span >元</span>
 		</a>
 	</div>
