simple auto commit

--- a/app/sass/bd_education_new.scss
+++ b/app/sass/bd_education_new.scss
@@ -20,7 +20,7 @@
 		font-size:0.18rem;
 	}
 	header.icon_4{
-		background: #006ee9 url('../img/index/plan_blue.jpg') no-repeat 18px center;
+		background: #006ee9 url('../img/bd_education/plane.png') no-repeat 18px center;
 		background-size: 28px;
 	
 
@@ -77,7 +77,7 @@
 	 }
 	 
 	.icon-guard{
-		  	background:url('../img/score/guard.jpg') no-repeat center;
+		  	background:url('../img/bd_education/guard.png') no-repeat center;
 		  	background-size:20px;
 		  	width:25px;
 		  	height:20px;
