--- a/app/css/bd_education_new.css
+++ b/app/css/bd_education_new.css
@@ -12,7 +12,7 @@ header {
   padding: 0 0.2rem 0 50px;
   font-size: 0.18rem; }
 header.icon_4 {
-  background: #006ee9 url("../img/index/plan_blue.jpg") no-repeat 18px center;
+  background: #006ee9 url("../img/bd_education/plane.png") no-repeat 18px center;
   background-size: 28px; }
 header.icon_3 {
   background: #006ee9 url("../img/health_icon.png") no-repeat 18px center;
@@ -68,7 +68,7 @@ header .how {
   margin-left: 2px;
   display: inline-block; }
 .icon-guard {
-  background: url("../img/score/guard.jpg") no-repeat center;
+  background: url("../img/bd_education/guard.png") no-repeat center;
   background-size: 20px;
   width: 25px;
   height: 20px;
