--- a/app/sass/index_part.scss
+++ b/app/sass/index_part.scss
@@ -47,7 +47,7 @@ body {
   color: #588dd4;
 }
 #loadingContainer {
-  height: 350px;
+  height: 4.5rem;
   background: #fff url(../img/loading.gif) no-repeat center/50px;
 }
 #pieChartContainer {
