--- a/app/css/index_part.css
+++ b/app/css/index_part.css
@@ -37,7 +37,7 @@ body {
   font-size: 0.17rem;
   color: #588dd4; }
 #loadingContainer {
-  height: 350px;
+  height: 4.5rem;
   background: #fff url(../img/loading.gif) no-repeat center/50px; }
 #pieChartContainer {
   padding-top: 0.1rem; }
