--- a/app/partials/product_information.html
+++ b/app/partials/product_information.html
@@ -1,40 +1,38 @@
 <!-- 投保须知 -->
 <link rel="stylesheet" href="css/information.css?rev=a8434d2a03742931759382f752362284">
-<div  data-ng-init="init()" cg-busy="myPromise">
+<div  data-ng-init="init()" cg-busy="myPromise" style="margin-bottom: 50px;">
 	<ul class="claim_controller">
 		<li ng-if="data.age_notice">
 			<p><img src="img/claim_information/logo.jpg" alt=""><span class="font_size29">年龄限制</span></p>
 			<a class="content"  >{{data.age_notice}}</a>
 		</li>
 	
-		<li ng-if="data.locale_notice">
+		<li ng-if="data.locales">
 			<p >
 				<img src="img/claim_information/logo.jpg" >
 				<span>区域限制</span>
 			</p>
-			<a class="content" >	
-				{{data.locale_notice}}
+			<a class="content" ng-repeat="notice in data.locales">
+				{{notice}}<br/>
 			</a>
 		</li>
 
-		<li ng-if="isHaveHealth">
+		<li ng-if="data.healths">
 			<p>
 				<img src="img/claim_information/logo.jpg" >
 				<span>健康限制</span>
 			</p>
-			<a class="content" ng-repeat="notice in data.notices">
-				{{notice.insurance_name}} 	{{notice.plan_name}}<br/>
-				<div ng-repeat="item in notice.healthNotices" style="font-size:12px;">{{item}}</div>
+			<a class="content" ng-repeat="notice in data.healths">
+				{{notice}}<br/>
 			</a>
 		</li>
-		<li  ng-if="isExtraNotice.length>0">
+		<li  ng-if="data.extras">
 			<p >
-				<img src="img/claim_information/logo.jpg">
+				<img src="img/claim_information/logo.jpg" >
 				<span>其他限制</span>
 			</p>
-			<a class="content" ng-repeat="notice in data.notices">
-				{{notice.insurance_name}} 	{{notice.plan_name}}<br/>
-				{{notice.extra_notice}} 	
+			<a class="content" ng-repeat="notice in data.extras">
+				{{notice}}<br/>
 			</a>
 		</li>
 	</ul>
