--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -32,7 +32,7 @@
 		<canvas id="chartContainer"  style="background:transparent;position:absolute;left:0;top:0;" ></canvas>
 		<div  id = "chartTextContainer" class="canvas_text"   style = "position:absolute;">
 			<!---->
-			<p  style="position:absolute;left:27%;margin:0;top:40%;font-size:0.20rem;text-align: center;color:#588dd4;line-height: 24px;" id="default_text">
+			<p  style="position:absolute;left:20%;margin:0;top:40%;font-size:0.20rem;text-align: center;color:#588dd4;line-height: 24px;display:none" id="default_text">
 			顺时针滑动<br/>
 			<span style="color:#999;">选择保障项目</span>
 			</p>
@@ -50,7 +50,7 @@
 
 		<div style="">
 			<img src="img/safe.jpg" style="width:15px;vertical-align: -3px;">
-			选择保障金额 ( 最高赔付额 )
+			选择保障金额 <span style="color:#999;"> 最高赔付额 </span>
 		</div>
 		<!--
 		<a href="javascript:void(0)"   class="btn btn_n_primary"  ng-click="showCompute()">保额测算</a>
