--- a/app/css/app.css
+++ b/app/css/app.css
@@ -257,6 +257,7 @@ footer {
   background-color: #1e4e8e;
   color: #4c87d6;
   padding: 7px 0 5px;
+  font-size:12px;
 }
 
   .cell-footer  .icon, .icon_hover {
@@ -351,3 +352,22 @@ footer {
   /*width: 3.34rem;*/
   width: 2.67rem;
 }
+  .up{
+    -ms-transform: rotate(180deg); /* IE 9 */
+      -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+      transform: rotate(180deg);
+  }
+  .right-rotate{
+    -ms-transform: rotate(270deg); /* IE 9 */
+      -webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
+      transform: rotate(270deg);
+  }
+  .icon-arrow{
+        background:url('../../img/temai/arrow.jpg') no-repeat center;
+        background-size:10px;
+        width:10px;
+        height:7px;
+        vertical-align: 1px;
+        margin-left:2px;
+        display: inline-block;
+   }
