--- a/app/css/bd_education_new.css
+++ b/app/css/bd_education_new.css
@@ -1,10 +1,6 @@
 @charset "UTF-8";
 body {
   background-color: #f5f5f5; }
-.up {
-  -ms-transform: rotate(180deg);
-  -webkit-transform: rotate(180deg);
-  transform: rotate(180deg); }
 header {
   color: #fff;
   height: 0.6rem;
@@ -13,13 +9,13 @@ header {
   font-size: 0.18rem; }
 header.icon_4 {
   background: #006ee9 url("../img/bd_education/plane.png") no-repeat 18px center;
-  background-size: 28px; }
+  background-size: 20px; }
 header.icon_3 {
   background: #006ee9 url("../img/health_icon.png") no-repeat 18px center;
-  background-size: 28px; }
+  background-size: 20px; }
 header.icon_2 {
   background: #006ee9 url("../img/heart_icon.png") no-repeat 18px center;
-  background-size: 28px; }
+  background-size: 20px; }
 header .how {
   float: right;
   vertical-align: middle;
@@ -59,20 +55,13 @@ header .how {
   .type .percent {
     color: #444;
     font-size: 13px; }
-.icon-arrow {
-  background: url("../img/temai/arrow.jpg") no-repeat center;
-  background-size: 10px;
-  width: 10px;
-  height: 7px;
-  vertical-align: 1px;
-  margin-left: 2px;
-  display: inline-block; }
 .icon-guard {
   background: url("../img/bd_education/guard.png") no-repeat center;
-  background-size: 20px;
-  width: 25px;
+  background-size: 15px;
+  width: 15px;
   height: 20px;
   vertical-align: -5px;
+  margin-right: 5px;
   display: inline-block; }
 .icon-up {
   background: url("../img/score/up.jpg") no-repeat center;
@@ -86,24 +75,29 @@ header .how {
   background-color: #fff;
   color: #555555; }
   .table-container .table-title {
-    border-bottom: 1px solid #e2e2e2; }
+    border-bottom: 1px solid #e2e2e2;
+    font-size: .15rem; }
     .table-container .table-title .left {
       padding-left: 0.2rem; }
     .table-container .table-title .right {
       padding-right: 0.2rem;
       text-align: right; }
+  .table-container .table-wrapper {
+    padding: 0 .2rem; }
+  .table-container .more {
+    color: #588dd4;
+    padding: 0.1rem;
+    text-align: center;
+    border-bottom: 1px solid #ccc; }
   .table-container table {
-    padding: 0 0.2rem;
     width: 100%;
     border-collapse: collapse;
     background-color: #fff; }
     .table-container table td {
-      padding: 0.1rem 0.2rem;
+      padding: 0.1rem 0.05rem;
       font-size: 0.15rem;
       text-align: center;
       border-bottom: 1px solid #e2e2e2; }
-    .table-container table .more {
-      color: #588dd4; }
 .btn_n_primary_new {
   color: #fff;
   background-color: #006ee9; }
