--- a/app/css/temai_detail.css
+++ b/app/css/temai_detail.css
@@ -223,7 +223,8 @@ header {
   width: 100%;
   border-top: 1px solid #e2e2e2;
   box-sizing: border-box;
-  height: 48px; }
+  height: 48px;
+  max-width: 640px; }
 .pay_container .left {
   margin-right: 1.5rem;
   width: 65%;
