--- a/app/css/toubao.css
+++ b/app/css/toubao.css
@@ -193,7 +193,7 @@ table td, table th {
   box-shadow: 0 0 2px #60afff;
 }
 .pay_container{
-  overflow: hidden;position: fixed;bottom:0;width:100%;border-top: 1px solid #e2e2e2;box-sizing: border-box;height: 48px;
+  overflow: hidden;position: fixed;bottom:0;width:100%;border-top: 1px solid #e2e2e2;box-sizing: border-box;height: 48px;max-width: 640px;
 }
 .pay_container .left{
   margin-right:1.5rem;width:65%;border-radius: 0
