--- a/app/sass/temai_detail.scss
+++ b/app/sass/temai_detail.scss
@@ -268,6 +268,7 @@ header {
 	border-top: 1px solid #e2e2e2;
 	box-sizing: border-box;
 	height: 48px;
+	max-width:640px;
 }
 .pay_container .left {
 	margin-right: 1.5rem;
