simple auto commit

--- a/app/css/bd_education_new.css
+++ b/app/css/bd_education_new.css
@@ -92,8 +92,13 @@ header .how {
   .table-container table {
     width: 100%;
     border-collapse: collapse;
-    background-color: #fff; }
+    background-color: #fff;
+    table-layout: fixed; }
     .table-container table td {
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      -o-text-overflow: ellipsis;
+      overflow: hidden;
       padding: 0.1rem 0.05rem;
       font-size: 0.15rem;
       text-align: center;
