simple auto commit

--- a/app/partials/solution.html
+++ b/app/partials/solution.html
@@ -1,4 +1,4 @@
-
+<div class="solution-container">
 <div class="header">
 	<div class="logo"> </div>
 	<div class="contaienr">
@@ -8,18 +8,17 @@
 </div>
 <div class="table-wrapper">
 	<table>
-		<tr><td><div>境内的旅游身故/伤残</div><div>境内旅游保险，也称国内旅游保险</div></td><td>40万</td></tr>
-		<tr><td><div>境内的旅游身故/伤残</div><div>境内旅游保险，也称国内旅游保险</div></td><td>40万</td></tr>
-		<tr><td><div>境内的旅游身故/伤残</div><div>境内旅游保险，也称国内旅游保险</div></td><td>40万</td></tr>
-		<tr><td><div>境内的旅游身故/伤残</div><div>境内旅游保险，也称国内旅游保险</div></td><td>40万</td></tr>
-		<tr><td><div>境内的旅游身故/伤残</div><div>境内旅游保险，也称国内旅游保险</div></td><td>40万</td></tr>
-		<tr>查看更多</tr>
+		<tr><td  class="left-td"><div>境内的旅游身故/伤残<div class="qa"></div></div><div  class="des">境内旅游保险，也称国内旅游保险</div></td><td class="right-td">40万</td></tr>
+		<tr><td  class="left-td"><div>境内的旅游身故/伤残<div class="qa"></div></div><div  class="des">境内旅游保险，也称国内旅游保险</div></td><td  class="right-td">40万</td></tr>
+		<tr><td  class="left-td"><div>境内的旅游身故/伤残<div class="qa"></div></div><div  class="des">境内旅游保险，也称国内旅游保险</div></td><td  class="right-td">40万</td></tr>
+		<tr><td  class="left-td"><div>境内的旅游身故/伤残<div class="qa"></div></div><div  class="des">境内旅游保险，也称国内旅游保险</div></td><td  class="right-td">40万</td></tr>
+		<tr><td  class="left-td"><div>境内的旅游身故/伤残<div class="qa"></div></div><div  class="des">境内旅游保险，也称国内旅游保险</div></td><td  class="right-td">40万</td></tr>
 	</table>	
-
 </div>
+	<div class="more">查看更多</div>
 
 <div class="introd">方案内容</div>
-<ul>
+<ul class="solution">
 	<li>
 		<div class="checkbox"></div>	
 		<div class="product">
@@ -49,7 +48,7 @@
 		<div class="arrow"></div>	
 	</li>	
 	<li>
-		<div class="checkbox"></div>	
+		<div class="checkbox choose"></div>	
 		<div class="product">
 			<div class="product-name">阳光-交通工具意外险 交通意外交通工</div>	
 			<div class="product-des">保额：300000元 保20年</div>	
@@ -60,3 +59,13 @@
 
 
 </ul>
+
+
+<div class="fix_container">
+	<div class="footer">
+	<a href="javascript:void(0)" class="btn btn_n_primary left" ng-click="submitbt()">投保金额<span class="money">88388</span>元</a>
+	<a href="javascript:void(0)" class="btn btn_n_primary right">立即投保</a>
+	</div>
+</div>
+
+</div>
