--- a/app/css/solution.css
+++ b/app/css/solution.css
@@ -1,13 +1,134 @@
+@charset "UTF-8";
+.solution-container {
+  background-color: #f5f5f5; }
 .header {
-  padding: 9px 0;
   background-color: #006ee9;
   color: #fff;
   height: 70px; }
   .header .logo {
     float: left;
-    width: 60px;
-    height: 100%;
+    width: 70px;
+    height: 70px;
     background: url("../img/solution/plane.png") no-repeat center;
     background-size: 30px; }
-  .header .contaienr .sub-title {
-    color: #97c8ff; }
+  .header .contaienr {
+    padding-top: 13px;
+    font-size: 15px; }
+    .header .contaienr .sub-title {
+      color: #97c8ff;
+      font-size: 13px; }
+.qa {
+  background: url("../img/temai/wen.png") no-repeat center;
+  background-size: 15px;
+  width: 15px;
+  height: 15px;
+  line-height: 0px;
+  display: inline-block;
+  vertical-align: -1px; }
+.table-wrapper {
+  padding: 0 .2rem;
+  background-color: #fff; }
+  .table-wrapper table {
+    width: 100%;
+    border-collapse: collapse;
+    font-size: 16px;
+    table-layout: fixed; }
+    .table-wrapper table tr:not(:last-child) {
+      border-bottom: 1px solid #e2e2e2; }
+    .table-wrapper table td {
+      padding: 0.1rem 0.05rem;
+      text-align: center; }
+    .table-wrapper table .left-td {
+      text-align: left;
+      width: 80%; }
+    .table-wrapper table .right-td {
+      text-align: right;
+      vertical-align: top; }
+    .table-wrapper table .des {
+      color: #999;
+      font-size: 14px; }
+.more {
+  background-color: #fff;
+  color: #588dd4;
+  padding: 0.1rem;
+  text-align: center;
+  border-top: 1px solid #e2e2e2;
+  border-bottom: 1px solid #ccc; }
+.introd {
+  color: #555;
+  padding-left: 10px;
+  margin-top: 20px;
+  background-color: #fff;
+  height: 45px;
+  line-height: 45px;
+  border-bottom: 1px solid #e2e2e2; }
+.solution {
+  background-color: #FFF;
+  padding-top: 5px;
+  margin-bottom: 60px; }
+  .solution li {
+    margin-bottom: 5px;
+    background-color: #f9f9f9;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex; }
+    .solution li .checkbox {
+      -webkit-box-flex: 1;
+      -webkit-flex: 1;
+      -moz-box-flex: 1;
+      -ms-flex: 1;
+      flex: 1;
+      background: url("../img/solution/unchoose.png") no-repeat center;
+      background-size: 20px; }
+    .solution li .checkbox.choose {
+      background: url("../img/solution/choose.png") no-repeat center;
+      background-size: 20px; }
+    .solution li .arrow {
+      background: url("../img/solution/arrow.png") no-repeat center;
+      background-size: 8px; }
+    .solution li .product {
+      -webkit-box-flex: 4;
+      -webkit-flex: 4;
+      -moz-box-flex: 4;
+      -ms-flex: 4;
+      flex: 4;
+      padding: 10px 0; }
+      .solution li .product .product-des {
+        color: #999;
+        font-size: 13px; }
+      .solution li .product .product-price {
+        color: #ff5c00; }
+    .solution li .arrow {
+      -webkit-box-flex: 1;
+      -webkit-flex: 1;
+      -moz-box-flex: 1;
+      -ms-flex: 1;
+      flex: 1;
+       }
+.footer {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex; }
+  .footer .left {
+    -webkit-box-flex: 65;
+    -webkit-flex: 65;
+    -moz-box-flex: 65;
+    -ms-flex: 65;
+    flex: 65;
+    background-color: #FFF;
+    color: #555; }
+    .footer .left .money {
+      color: #ff5c00;
+      font-weight: bold;
+      font-size: 16px; }
+  .footer .right {
+    -webkit-box-flex: 35;
+    -webkit-flex: 35;
+    -moz-box-flex: 35;
+    -ms-flex: 35;
+    flex: 35;
+    background-color: #ff5c00; }
