--- a/app/sass/solution.scss
+++ b/app/sass/solution.scss
@@ -1,20 +1,142 @@
-.header{
-	.logo{
-		float:left;
-		width:60px;
-		height:100%;
+@import "base/classes.scss";
+@import "base/variables.scss";
+.solution-container{
+	background-color: #f5f5f5;
+}
+
+.header {
+	.logo {
+		float: left;
+		width: 70px;
+		height: 70px;
 		background: url('../img/solution/plane.png') no-repeat center;
-		background-size:30px;
+		background-size: 30px;
 	}
-	.contaienr{
-		
-		.sub-title{
-			color:#97c8ff;
+
+	.contaienr {
+		padding-top: 13px;
+		font-size:15px;
+		.sub-title {
+			color: #97c8ff;
+			font-size:13px;
+		}
+
+	}
+
+	background-color: #006ee9;
+	color: #fff;
+	height: 70px;
+}
+.qa{
+	background: url('../img/temai/wen.png') no-repeat center;
+	background-size:15px;
+	width:15px;
+	height:15px;
+	line-height:0px;
+	display:inline-block;
+	vertical-align:-1px;
+}
+.table-wrapper {
+	padding: 0 .2rem;
+	background-color: #fff;
+	
+
+	table {
+		width: 100%;
+		border-collapse: collapse;
+		font-size:16px;
+		table-layout: fixed;
+		tr:not(:last-child){
+			border-bottom: 1px solid #e2e2e2;
+		}
+		td{
+			padding: 0.1rem 0.05rem;
+			text-align: center;
+		}
+		.left-td{
+			text-align: left;
+			width:80%;
+		}
+		.right-td{
+			text-align: right;
+			vertical-align: top;
+		}
+		.des{
+			color:#999;
+			font-size:14px;
+		}
+
+	}
+}
+.more {
+		background-color: #fff;
+		color: #588dd4;
+		padding: 0.1rem;
+		text-align: center;
+		border-top:1px solid #e2e2e2;
+		border-bottom: 1px solid #ccc;
+}
+.introd{
+	color:#555;
+	padding-left:10px;
+	margin-top:20px;
+	background-color: #fff;
+	height:45px;
+	line-height:45px;
+	border-bottom:1px solid #e2e2e2;
+}
+
+.solution{
+	background-color: #FFF;
+	padding-top:5px;
+	margin-bottom:60px;
+	li{
+		margin-bottom:5px;
+		background-color: #f9f9f9;
+		@include flexbox;
+		.checkbox{
+			@include flex(1);
+			background:url('../img/solution/unchoose.png') no-repeat center;
+			background-size:20px;
+		}
+		.checkbox.choose{
+			background:url('../img/solution/choose.png') no-repeat center;
+			background-size:20px;
+		}
+		.arrow{
+			background:url('../img/solution/arrow.png') no-repeat center;
+			background-size:8px;
+		}
+		.product{
+			@include flex(4);
+			padding:10px 0;
+			.product-des{
+				color:#999;
+				font-size:13px;
+			}
+			.product-price{
+				color:#ff5c00;
+			}
+		}
+		.arrow{
+			@include flex(1);
 		}
 	}
-	padding:9px 0;	
-	background-color: #006ee9;
-	color:#fff;
-	height:70px;
-
+}
+.footer{
+	@include flexbox;
+	.left{
+		@include flex(65);
+		background-color: #FFF;
+		color:#555;
+		.money{
+			color:#ff5c00;
+			font-weight: bold;
+			font-size:16px;
+		}
+	}
+	.right{
+		@include flex(35);
+		background-color: #ff5c00;
+	}
 }
