simple auto commit

--- a/app/partials/temai_index.html
+++ b/app/partials/temai_index.html
@@ -48,7 +48,7 @@
 <div class="nav">
 	<a href="javascript:" class="item" id="showShare"><img src="img/temai/nav-1.png"><div >0元抢</div></a>
 	<a href="/wx_gl.html" class="item"><img src="img/temai/nav-2.png"><div>怎么买</div></a>
-	<a href="/" class="item"><img src="img/temai/nav-3.png"><div>专属方案</div></a>
+	<a href="/index.html#/index" class="item"><img src="img/temai/nav-3.png"><div>专属方案</div></a>
 	<a href="/#temailist" class="item"><img src="img/temai/nav-4.png"><div>更多保障</div></a>
 </div>
 
