--- a/app/wx_share/partials/index_part.html
+++ b/app/wx_share/partials/index_part.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="wx_share/css/index.css?rev=231888220ed4fb1fbf9f8d5d420a87c2">
+<link rel="stylesheet" href="wx_share/css/index.css?rev=b8e462a50724544c91214ff0fde0fc63">
 <div class="my_bd_controller">
 	<ul class="layout ul_contrl">
 		<li >
@@ -9,7 +9,7 @@
 		<li></li>
 	</ul >
 	<div class="share_mian">
-		<img src="wx_share/img/my_bd/activity_big.png" srcset="wx_share/img/my_bd/activity_small.png 568w, wx_share/img/my_bd/activity_big.pngg 667w, wx_share/img/my_bd/activity_big.png 736w">
+		<img src="wx_share/img/my_bd/activity_big.png" srcset="wx_share/img/my_bd/activity_small.png 568w, wx_share/img/my_bd/activity_big.png 667w, wx_share/img/my_bd/activity_big.png 736w">
 		<!-- <img src="wx_share/img/my_bd/activity_small.png"> -->
 		<div class="up">
 			<div class="img_logo layout">
