--- a/app/css/temai_detail.css
+++ b/app/css/temai_detail.css
@@ -241,7 +241,7 @@ header {
   color: #ff5c00; }
 .head-container {
   position: absolute;
-  top: 100px;
+  top: 22.7%;
   bottom: 0;
   width: 100%;
   background-color: #fff; }
@@ -262,7 +262,7 @@ header {
   background: #fff url("../img/close_1.jpg") no-repeat center/25px;
   background-size: 100% 100%; }
 .select-container {
-  margin-left: 0.17rem; }
+  margin: 0 0.17rem; }
 .select-container h4 {
   margin: 0.14rem 0 0.08rem 0;
   color: #535353; }
@@ -306,3 +306,27 @@ header {
 .more_ctrl {
   width: 110px;
   margin: 0 auto 20px; }
+.date_ctrl {
+  width: 100%;
+  height: 45px;
+  border: 1px solid #c1c1c1;
+  background: url(../img/down_jian.jpg) no-repeat 97% center; }
+.grade li {
+  float: left;
+  height: 25px; }
+.grade img {
+  width: 9px; }
+.grade li:nth-child(1) {
+  line-height: 16px;
+  border-radius: 2px 0 0 2px; }
+.grade li:nth-child(1), .grade .grade li:nth-child(3) {
+  width: 25px;
+  border: 1px solid #c1c1c1;
+  text-align: center; }
+.grade li:nth-child(2) {
+  width: 70px;
+  border-top: 1px solid #c1c1c1;
+  border-bottom: 1px solid #c1c1c1;
+  text-align: center; }
+.grade li:nth-child(3) {
+  border-radius: 0 2px 2px 0; }
