--- a/app/wx_share/css/index.css
+++ b/app/wx_share/css/index.css
@@ -1,252 +1,74 @@
 @charset "UTF-8";
-/**
- * Yo框架全局基础方法
- -----------------------
- * Yo内置了包括响应式方案，CSS3兼容性方案，厂商前缀方案，iconfont方案，flex布局等全局方法
- *
- * @class classes
- * @module Yo
- */
-/**
- * 给需要的属性加厂家前缀
- * @method prefix
- * @param {String} $property 指定属性
- * @param {String} $value 指定属性值
- */
-/**
- * 四则运算
- * @method calc
- * @param {String} $property 指定需要进行计算的CSS属性
- * @param {String} $value 与原生CSS语法一致，使用方式如：@include calc(width, 100% - 0.1rem);
- */
-/**
- * 定义渐变色值
- * @method gradient
- * @param {String} $type 指定渐变的4种类型：linear, repeating-linear, radial, repeating-radial
- * @param {String} $gradient 指定渐变取值，与w3c最新原生语法一致
- */
-/**
- * 定义响应式方案
- * @method responsive
- * @param {String} $media 指定媒体查询条件
- */
-/**
- * 定义字体图标
- * @method yofont
- */
-/**
- * 滤镜
- * @method filter
- * @param {String} $filter 取值与原生语法一致
- */
-/**
- * 定义UA默认外观
- * @method appearance
- * @param {String} $appearance 指定UA外观类型
- */
-/**
- * 定义是否可以选中元素
- * @method user-select
- * @param {String} $user-select 指定是否可以选中
- */
-/**
- * 定义背景图像缩放（Android Browser2.3.*还需要厂商前缀）
- * @method background-size
- * @param {String | Length} $background-size 指定背景图缩放值
- */
-/**
- * 定义背景裁减（Android Browser2.3.*还需要厂商前缀）
- * @method background-clip
- * @param {String} $background-clip 指定背景图缩放值
- */
-/**
- * 定义背景显示区域（Android Browser2.3.*还需要厂商前缀）
- * @method background-origin
- * @param {String} $background-origin 指定背景图缩放值
- */
-/**
- * 定义盒模型
- * @method box-sizing
- * @param {String} $box-sizing 的2个值分别为：content-box(标准盒模型) | border-box(怪异盒模型)
- */
-/**
- * 定义圆角
- * @method border-radius
- * @param {String} $border-radius 取值与原生语法一致
- */
-/**
- * 定义简单变换
- * @method transform
- * @param {String} $transform 取值与原生语法一致
- */
-/**
- * 定义变换原点
- * @method transform-origin
- * @param {String} $transform-origin 取值与原生语法一致
- */
-/**
- * 定义动画
- * @method animation
- * @param {String} $animation 取值与原生语法一致
- */
-/**
- * 定义补间
- * @method transition
- * @param {String} $transition 取值与原生语法一致
- */
-/**
- * 定义显示类型为伸缩盒
- * @method flexbox
- * @param {String} $flexbox 默认值：flex，取值与最新原生语法一致
- */
-/**
- * 定义伸缩盒子元素如何分配空间
- * @method flex
- * @param {String} $flex 默认值：1，取值与最新原生语法一致
- * @param {String} $direction 默认值: row
- */
-/**
- * 定义伸缩盒子元素的排版顺序
- * @method order
- * @param {String} $order 默认值：1，取值与最新原生语法一致
- */
-/**
- * 定义伸缩盒子元素的流动方向
- * @method flex-direction
- * @param {String} $flex-direction 默认值：row，取值与最新原生语法一致
- */
-/**
- * 定义伸缩盒子元素溢出排版
- * @method flex-wrap
- * @param {String} $flex-wrap 默认值：nowrap，取值与最新原生语法一致
- */
-/**
- * 定义伸缩盒子元素的水平对齐方式
- * @method justify-content
- * @param {String} $justify-content 默认值：center，取值与最新原生语法一致
- */
-/**
- * 定义伸缩盒子元素的垂直对齐方式
- * @method align-items
- * @param {String} $align-items 默认值：center，取值与最新原生语法一致
- */
-/**
- * 定义伸缩盒子元素自身的垂直对齐方式
- * @method align-self
- * @param {String} $align-self 默认值：center，取值与最新原生语法一致
- */
-/**
- * 定义root root-scroll
- * @method root-scroll
- * @param {String} $root-scroll 指定scroll类型，取值overflow属性的标准值
- */
-/**
- * 定义是否有滚动条
- * @method overflow
- * @param {String} $overflow 默认值：auto，取值与最新原生语法一致
- */
-/**
- * 生成矩形方法
- * @method rect
- * @param {Length} $width 定义矩形的长度
- * @param {Length} $height 定义矩形的高度
- */
-/**
- * 生成正方形方法
- * @method square
- * @param {Length} $size 定义正方形的边长
- */
-/**
- * 生成圆形方法
- * @method circle
- * @param {Length} $size 定义圆的半径长度
- * @param {Length} $radius 定义圆的圆角半径长度
- */
-/**
- * 生成全屏方法
- * @method fullscreen
- * @param {Integer} $z-index 定义层叠级别
- */
-/**
- * 清除浮动方案
- * @method clearfix
- */
-/**
- * 链接处理方法
- * @method link
- * @param {Color} $color 定义链接颜色
- */
-/**
- * 强制换行方案
- * @method wrap
- */
-/**
- * 单行文本溢出显示方案
- * @method ellipsis
- * @param {Boolen} $ellipsis 定义是否需要省略号
- */
-/**
- * 文字隐藏方案
- * @method texthide
- */
-/**
- * 清除间隙方案-容器
- * @method killspace
- */
-/**
- * 清除间隙方案-子级
- * @method killspace-item
- */
-/**
- * 未知尺寸元素垂直居中解决方案-容器
- * @method valign
- */
-/**
- * 未知尺寸元素垂直居中解决方案-子级
- * @method valign-item
- */
-/**
- * 已经尺寸元素垂直居中解决方案
- * @method alignment
- * @param {Length} $width 居中元素的宽度
- * @param {Length} $height 居中元素的高度
- */
-/* border */
-/**
- * Yo框架全局Variables
- -----------------------
- * Yo基础变量map，如果不想定义某属性，将其value设置为null；
- * Yo仅使用2种长度单位：px用于边框，rem用于除边框之外的所有地方
- *
- * @class variables
- * @module Yo
- */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 * {
   margin: 0;
   padding: 0; }
 
-/* <=320的奇葩手机 */
+
 @media (max-width: 320px) {
   html {
     font-size: 100px; }
   .img_logo a, .duihuan_btn {
     line-height: .4rem; } }
 
-/* iphone 4, iphone5 */
+
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) {
   html {
     font-size: 100px; }
   .img_logo a, .duihuan_btn {
     line-height: .4rem; } }
 
-/* iphone 6 */
+
 @media only screen and (min-device-width: 375px) and (max-device-width: 667px) {
   html {
     font-size: 117.18px; }
   .img_logo a, .duihuan_btn {
     line-height: .5rem; } }
 
-/* iphone6 plus */
+
 @media only screen and (min-device-width: 414px) and (max-device-width: 736px) {
   html {
     font-size: 129.37px; }
@@ -272,13 +94,13 @@ body {
 .ul_contrl {
   padding: 0 .17rem .25rem .17rem;
   display: -webkit-box;
-  /* 老版本语法: Safari, iOS, Android browser, older WebKit browsers. */
+  
   display: -moz-box;
-  /* 老版本语法: Firefox (buggy) */
+  
   display: -ms-flexbox;
-  /* 混合版本语法: IE 10 */
+  
   display: -webkit-flex;
-  /* 新版本语法: Chrome 21+ */
+  
   display: flex; }
 
 .ul_contrl li:nth-child(1) {
@@ -287,7 +109,7 @@ body {
   -ms-flex: 1;
   flex: 1;
   border-bottom: 5px solid #e52f62;
-  /*padding-bottom: .07rem;*/ }
+   }
 
 .ul_contrl li:nth-child(2) {
   width: .06rem; }
@@ -316,7 +138,7 @@ img {
 .share_mian {
   position: relative; }
 
-/*500万航班意外险*/
+
 .up {
   position: absolute;
   left: 0;
@@ -345,18 +167,13 @@ img {
 
 .img_logo a {
   display: inline-block;
-  /*padding: .1rem 0 0 0;*/
+  
   -webkit-box-flex: 1;
   -webkit-flex: 1;
   -moz-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  /*
-    @if $direction == column {
-        height: .1px;
-    } @else {
-        width: .1px;
-    }*/
+  
   text-align: center;
   color: #fff;
   border-radius: 5px;
@@ -382,7 +199,7 @@ img {
   font-size: .13rem;
   padding: 0 0 0 .1rem; }
 
-/*300元航班延误险*/
+
 .duihuan {
   width: 100%;
   position: absolute;
@@ -418,12 +235,7 @@ img {
   -moz-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  /*
-    @if $direction == column {
-        height: .1px;
-    } @else {
-        width: .1px;
-    }*/
+  
   background: #e52f62;
   text-align: center;
   color: #fff;
@@ -456,7 +268,7 @@ img {
   height: .13rem;
   vertical-align: -2px; }
 
-/*底部横线+二维码*/
+
 .index_font_controller {
   padding: 0 20px 0 20px;
   position: relative; }
@@ -485,18 +297,10 @@ img {
   -moz-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  /*
-    @if $direction == column {
-        height: .1px;
-    } @else {
-        width: .1px;
-    }*/
+  
   padding-right: .2rem;
   line-height: .17rem;
-  /* -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;*/
+  
   color: #a08f66;
   font-size: .12rem; }
 
@@ -518,15 +322,15 @@ img {
 .footer_border {
   padding: .1rem .15rem;
   display: -webkit-box;
-  /* 老版本语法: Safari, iOS, Android browser, older WebKit browsers. */
+  
   display: -moz-box;
-  /* 老版本语法: Firefox (buggy) */
+  
   display: -ms-flexbox;
-  /* 混合版本语法: IE 10 */
+  
   display: -webkit-flex;
-  /* 新版本语法: Chrome 21+ */
+  
   display: flex;
-  /* 新版本语法: Opera 12.1, Firefox 22+ */
+  
   flex-flow: row; }
 
 .footer_border li:nth-child(1) {
