delete useless css file

--- a/app/partials/recognizee_first.html
+++ b/app/partials/recognizee_first.html
@@ -1,4 +1,7 @@
-<link rel="stylesheet" href="css/recognizee_first.css?rev=dgffdhgfjdh">
+<link rel="stylesheet" href="css/recognizee_first.css?rev=9d1e5707da8ba43a7a14f729c5abe65a">
 <div class="recognizee_first_ctrl">
-	recognizee_first
+	<div class="rgn_head">选择被保险人</div>
+	<div class="choose">
+		
+	</div>
 </div>
