--- a/app/css/recognizee_first.css
+++ b/app/css/recognizee_first.css
@@ -1,4 +1,11 @@
 @charset "UTF-8";
-.recognizee_first_ctrl {
-  height: 100px;
-  background: red; }
+body {
+  background: #f5f5f5; }
+.recognizee_first_ctrl .rgn_head {
+  line-height: 54px;
+  background: #006ee9;
+  padding: 0 14px;
+  font-size: 15px;
+  color: #fff; }
+.recognizee_first_ctrl .choose {
+  line-height: 80px; }
