--- a/app/sass/recognizee_first.scss
+++ b/app/sass/recognizee_first.scss
@@ -1,6 +1,18 @@
 @import "base/classes.scss";
 @import "base/variables.scss";
+
+body {
+	background: #f5f5f5;
+}
 .recognizee_first_ctrl {
-	height: 100px;
-	background: red;
+	.rgn_head {
+		line-height: 54px;
+		background: #006ee9;
+		padding: 0 14px;
+		font-size: 15px;
+		color: #fff;
+	}
+	.choose {
+		line-height: 80px;
+	}
 }
