--- a/app/wx_share/partials/success_coupon.html
+++ b/app/wx_share/partials/success_coupon.html
@@ -1,5 +1,20 @@
-<link rel="stylesheet" href="wx_share/css/success_coupon.css?rev=85a23c8d97330652fa4e99841697af3c">
-<div id="wrapper" class="wrapper layout">
+<link rel="stylesheet" href="wx_share/css/success_coupon.css?rev=sdsdgsd">
+<link rel="stylesheet" type="text/css" href="css/pay_success.css">
+<div class="pay_success_ctrl">
+	<div class="win">
+		<img src="wx_share/img/win.jpg"> &nbsp;保险劵领取成功
+	</div>
+	<div class="hints">请按照以下步骤使用保险劵</div>
+</div>
+<div class="main"> <img src="img/win_hint/main.jpg"></div>
+
+
+
+
+
+
+
+<!-- <div id="wrapper" class="wrapper layout">
 	<div class="coupon_nav left">
 		<div class="one"></div>
 		<div class="hei_16">
@@ -37,4 +52,4 @@
 				</div>
 			</div>
 	</div>
-</div>
+</div> -->
