--- a/app/partials/recognizee_first.html
+++ b/app/partials/recognizee_first.html
@@ -1,7 +1,75 @@
-<link rel="stylesheet" href="css/recognizee_first.css?rev=9d1e5707da8ba43a7a14f729c5abe65a">
+<link rel="stylesheet" href="css/recognizee_first.css?rev=eb057d857ddf115b411fe45c86004e31">
 <div class="recognizee_first_ctrl">
 	<div class="rgn_head">选择被保险人</div>
 	<div class="choose">
-		
+		<div class="self">
+			<label class="demo--label">
+		        <input class="demo--radio" type="radio" name="demo-radio">
+		        <span class="demo--radioInput"></span> 为本人投保
+		    </label>
+		</div>
+        <div class="others">
+        	 <label class="demo--label">
+        <input class="demo--radio" type="radio" name="demo-radio">
+        <span class="demo--radioInput"></span>不约，叔叔我们不约
+    </label>
+        	为他人投保
+        </div>
+	</div>
+	<!-- 为本人 -->
+	<div class="self_people">
+		<div class="ziliao">完善被保人资料
+		</div>
+		<div class="main">
+			<ul>
+				<li>姓名</li><input type="text" placeholder="宋仲基">
+			</ul>
+			<ul>
+				<li>身份证号</li><input type="text" placeholder="请输入被保人身份证号">
+			</ul>
+			<ul style="border-bottom:none;">
+				<li>手机号码</li><input type="text" placeholder="用于接收保单信息">
+			</ul>
+		</div>
+	</div>
+	<div></div>
+	<!-- 为他人 -->
+	<div class="others_people" style="display: none">
+		<div class="ziliao">完善被保人资料
+		</div>
+		<div class="main">
+			<ul>
+				<li>姓名</li><input type="text" placeholder="宋仲基">
+			</ul>
+			<ul>
+				<li>身份证号</li><input type="text" placeholder="请输入被保人身份证号">
+			</ul>
+			<ul>
+				<li>手机号码</li><input type="text" placeholder="用于接收保单信息">
+			</ul>
+			<ul style="border-bottom:none;">
+				<li>关系</li><input type="text" placeholder="选择与被保人关系">
+			</ul>
+		</div>
+		<div class="ziliao">完善被保人资料</div>
+		<div class="main">
+			<ul>
+				<li>姓名</li><input type="text" placeholder="宋慧乔">
+			</ul>
+			<ul style="border-bottom:none;">
+				<li>身份证号</li><input type="text" placeholder="请输入您的身份证号">
+			</ul>
+		</div>
 	</div>
 </div>
+<div>
+    <label class="demo--label">
+        <input class="demo--radio" type="radio" name="demo-radio">
+        <span class="demo--radioInput"></span>约
+    </label>
+    <label class="demo--label">
+        <input class="demo--radio" type="radio" name="demo-radio">
+        <span class="demo--radioInput"></span>不约，叔叔我们不约
+    </label>
+</div>
+<div class="recognizee_first_btn">完成</div>
