--- a/app/wx_share/partials/special_offer.html
+++ b/app/wx_share/partials/special_offer.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="wx_share/css/special_offer.css?rev=cd842a0b14f2e567e17ccb1ba8acf43b">
-<div class="special_offer_ctrl">
+<div class="special_offer_ctrl"  data-ng-init="init()">
 	<div class="special_main">
 		<img src="wx_share/img/special/special_back_small.png" srcset="wx_share/img/special/special_back_small.png 568w, wx_share/img/special/special_back_big.png 667w, wx_share/img/special/special_back_big.png 736w">
 		<!-- <div class="lijian">分享好友，立减10元</div> -->
@@ -12,9 +12,9 @@
 		</div>
 		<div class="special_btn">
 		    <div class="wid_10"></div>
-			<div class="yuanjia_btn" ng-click="original()">￥50 原价购买</div>
+			<div class="yuanjia_btn"  ng-click="original()">￥50 原价购买</div>
 			<div class="kong"></div>
-			<div class="youhui_btn">￥40 优惠购买</div>
+			<div class="youhui_btn"  ng-click="discount()">￥40 优惠购买</div>
 			<div class="wid_10"></div>
 		</div>
 	</div>
