--- a/app/partials/recognizee_first.html
+++ b/app/partials/recognizee_first.html
@@ -1,19 +1,18 @@
-<link rel="stylesheet" href="css/recognizee_first.css?rev=eb057d857ddf115b411fe45c86004e31">
+<link rel="stylesheet" href="css/recognizee_first.css?rev=e379b592fd4e8685d06518fd86d7a57e">
 <div class="recognizee_first_ctrl">
 	<div class="rgn_head">选择被保险人</div>
 	<div class="choose">
 		<div class="self">
 			<label class="demo--label">
-		        <input class="demo--radio" type="radio" name="demo-radio">
+		        <input class="demo--radio" type="radio" name="demo-radio" checked="checked">
 		        <span class="demo--radioInput"></span> 为本人投保
 		    </label>
 		</div>
         <div class="others">
-        	 <label class="demo--label">
-        <input class="demo--radio" type="radio" name="demo-radio">
-        <span class="demo--radioInput"></span>不约，叔叔我们不约
-    </label>
-        	为他人投保
+        	<label class="demo--label">
+		        <input class="demo--radio" type="radio" name="demo-radio">
+		        <span class="demo--radioInput"></span>为他人投保
+		    </label>
         </div>
 	</div>
 	<!-- 为本人 -->
@@ -61,15 +60,5 @@
 			</ul>
 		</div>
 	</div>
-</div>
-<div>
-    <label class="demo--label">
-        <input class="demo--radio" type="radio" name="demo-radio">
-        <span class="demo--radioInput"></span>约
-    </label>
-    <label class="demo--label">
-        <input class="demo--radio" type="radio" name="demo-radio">
-        <span class="demo--radioInput"></span>不约，叔叔我们不约
-    </label>
 </div>
 <div class="recognizee_first_btn">完成</div>
