--- a/app/partials/recognizee_compile.html
+++ b/app/partials/recognizee_compile.html
@@ -1,12 +1,16 @@
 <link rel="stylesheet" href="css/recognizee_compile.css">
 <div class="recognizee_compile_ctrl">
-	<div class="head"><img src="wx_share/img/rc/jia.png" >  新增被保险人</div>
+	<div class="head_ctrl">
+		<div class="head"><img src="wx_share/img/rc/jia.png" >  新增被保险人</div>
+	</div>
 	<div class="bor"></div>
 	<div class="main">
 		<div class="main_head">
-			<span>宋仲基</span>
-			<span>本人</span>
-			<span><img src="img/pianji.png" ></span>
+			<div class="head_left">宋仲基</div>
+			<div class="head_right">本人</div>
+			<div class="head_bottom"><img src="img/pianji.png" ></div>
 		</div>
+		<div class="status">身份证号： <input type="text" placeholder="30721198806252016"></div>
+		<div class="phone">手机号码：<input type="text " placeholder="15661035282"><span class="right">默认&nbsp;&nbsp;  <img src="img/gou.png"></span></div>
 	</div>
 </div>
