--- a/app/sass/recognizee_compile.scss
+++ b/app/sass/recognizee_compile.scss
@@ -3,9 +3,22 @@
 body {
 	background: #f5f5f5;
 }
+.left {
+	float: left;
+}
+.right {
+	float: right;
+}
+input {
+	border: none;
+}
 .recognizee_compile_ctrl {
+	.head_ctrl {
+		padding: 15px 10px;
+		background: #fff;
+	}
 	.head {
-		margin: 15px 10px;
+		
 		box-sizing: border-box;
 		border-radius: 5px;
 		line-height: 45px;
@@ -23,34 +36,48 @@ body {
 		height: 1px;
 	}
 	.main {
-		height: 95px;
+		// height: 95px;
 		// @include border(0 0 1px 0,#c4c4c4);
 		border-bottom: 1px solid #c4c4c4;
 		background: #fff;
-		padding: 17px 15px;
+		padding: 15px 15px 10px 15px;   
+		box-sizing: border-box;
 		.main_head {
 			@include flexbox;
-			span {
-				display: block;
-				// line-height: 18px;
-				vertical-align: bottom;
+			padding-bottom: 10px;
 			}
-			span:nth-child(1) {
+			.head_left {
+				width: 63px;
 				font-size: 18px;
 				color: #555;
+				vertical-align: bottom;
+				display:table-cell; 
 			}
-			span:nth-child(2) {
+			.head_right {
 				font-size: 13px;
 				color: #999;
 				@include flex(1);
+				box-sizing: border-box;
+				padding-top:5px;
 			}
-			span:nth-child(3) {
-				width: 15px;
+			.head_bottom {
+				width: 20px;
 				img {
 					width: 15px;
+					vertical-align: middle;
 				}
-
+			}
+			.status,.phone {
+				color: #999;
+				font-size: 13px;
+				line-height: 20px;
+				span {
+					font-size: 13px;
+					color: #5aa8ff;
+				}
+				img {
+					width: 13px;
+				}
 			}
 		}
 	}
-}
